Pre-release API audit: fix a real bug, tighten javadoc and immutability
Three independent auditors went through every public class. One finding was
a real bug, the rest were documentation and defensive-copy gaps.

The bug: RssOutput.output(Rss, OutputStream) and output(Rss, Writer) claimed
in their javadoc to leave the caller's stream open ("flushed but not closed"),
but Jackson closes the target by default after writing. Measured before and
after: a tracking stream showed closed=true on the old code, closed=false now.
A caller using try-with-resources around their own stream would have hit a
double-close; one reusing the stream for further writes would have hit an
IOException. Fixed by disabling CLOSE_CLOSEABLE and AUTO_CLOSE_TARGET on the
shared mapper, which is what the javadoc always claimed to be true.

Other fixes:
- Item.build()'s javadoc was floating above the wrong method, attached to
  extension() while build() itself had none. Moved to the right place.
- Missing javadoc added on several builder setters across Rss, Channel and
  Item (title, link, description, pubDate, items, channel, build).
- Item.category and Channel.category/items now defensively copy on the way
  in: the varargs overloads used Arrays.asList, which permits set() even
  though it forbids add/remove, and the List overloads stored the caller's
  list by reference with no copy at all.
- DateParser.formatRfc822 and Day.from now reject null with a clear message
  instead of an unexplained NPE from inside their implementation.
- SkipHours and SkipDays no longer reuse the same message for "the list is
  null" and "the list is empty" -- those are different mistakes. SkipDays'
  duplicate-value message now matches SkipHours' format ("day X is listed
  twice", matching "hour X is listed twice").
- Rss gains getNamespaces(), the one element getter missing from the public
  API the README already advertises as complete.
- Image.of and TextInput.of document why they have no cdata(...) counterpart:
 